adding more evaluation

--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,9 @@ PROJECT_ENDPOINT=https://your-project-name.services.ai.azure.com/api/projects/yo
 # -----------------------------------------------------------------------------
 # Not used directly by the toolkit, but useful for scripts
 # AZURE_SUBSCRIPTION_ID=your-subscription-id
+
+# -----------------------------------------------------------------------------
+# Evaluation (OPTIONAL)
+# -----------------------------------------------------------------------------
+# Override the evaluation API version if your project requires a specific one.
+# EVALUATION_API_VERSION=2025-11-15-preview
