--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ httpx>=0.26.0
 aiofiles>=23.2.0
 
 # Development (optional)
-# pytest>=7.4.0
+pytest>=7.4.0
 # pytest-asyncio>=0.23.0
 # black>=24.0.0
 # ruff>=0.1.0
