Stop tracking CLAUDE.md

--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,7 @@ samples/
 local/
 .env.test
 AGENTS.md
+CLAUDE.md
 foundry_logo_design.png
 foundry_logo_design.png.crdownload:sec.endpointdlp
 foundry_logo_design.png:Zone.Identifier
